# ixrs

./: .envrc  .gitignore  flake.nix  hkrs.cabal  ixrs.cabal  readme.md
src/: Main.hs
src/Data/Functor/: HFoldable.hs
src/Data/Functor/HFoldable/: TH.hs
src/Test/: Expr.hs
