cabal-version:   3.0
name:            hkrs
version:         0.1.0.0
license:         AGPL-3.0-only
author:          dxo
maintainer:      hackage@d-xo.org
build-type:      Simple

common warnings
    ghc-options: -Wall

executable hkrs
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
    hs-source-dirs:   src
    default-language: Haskell2010
