cabal-version:   3.0
name:            hkrs
version:         0.1.0.0
license:         AGPL-3.0-only
author:          dxo
maintainer:      hackage@d-xo.org
build-type:      Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Data.Functor.HFoldable
                      Data.Functor.HFoldable.TH
    other-modules:    Test.Expr
    build-depends:    base,
                      text,
                      template-haskell,
    hs-source-dirs:   src
    default-language: GHC2021
